src/css/style.css
header{
    background-color: #910000;
    text-align: center;
    padding: 20px;
}

header n1 {
    margin: 0;
}

body{
    text-align: center;
    font-family: sans-serif;
    background-color: #910000;
    color: #f8f5f2;
    margin: 0;
    padding: 0;
}

img{
    border-radius: 5px;
    object-fit: cover;
    width: 300px;
    height: 300px;
}

